Fixes bug with vertical nav tab not showing as current.

--- a/admin/themes/default/css/components.css
+++ b/admin/themes/default/css/components.css
@@ -82,7 +82,7 @@ div.field {overflow:hidden; zoom:1; position:relative; border-bottom:1px dotted 
 .vertical-nav ul#section-nav {margin:0; padding:0;float:left; width: 198px;font-size:1.1em;margin-top:18px;background:transparent url("../images/list-border-tan.gif") bottom left repeat-x;}
 	.vertical-nav ul#section-nav a {text-decoration:none; display:block;padding:9px 9px 6px; color: #467;background:transparent url("../images/list-border-tan.gif") top left repeat-x;}
 	.vertical-nav ul#section-nav a:hover {background-color:#f6f5e9;}
-	.vertical-nav ul#section-nav li.current a, .vertical-nav ul#section-nav li a:active {background:#fff !important; font-weight:bold;color: #c60;border:1px solid #d7d5c4;border-width:1px 0 0 3px;}
+	.vertical-nav ul#section-nav li.current a, .vertical-nav ul#section-nav li a.active {background:#fff !important; font-weight:bold;color: #c60;border:1px solid #d7d5c4;border-width:1px 0 0 3px;}
 
 .horizontal-nav ul#section-nav {margin:0; padding:0;font-size:1.1em; padding:9px 0 12px;}
 	.horizontal-nav ul#section-nav li {display:inline;}
